# Diplom_2025V2

./: .env  index.html  package-lock.json  vite.config.js
face_recognition/: CMakeLists.txt  Dockerfile  README.md
face_recognition/include/: data_loader.h
face_recognition/src/: data_loader.cpp
